# llm-bio-automl

./: .env.agent.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  RESULTS.md  pyproject.toml
assets/: workflow.dot
docs/: AIBUILDAI.md  ARCHITECTURE.md  CHALLENGE_BRIEF.md  COMPETITOR_ANALYSIS.md  GENERALIZATION_PLAN.md  PRODUCT_DESIGN.md  README_FINETUNE.md  SKILL.md  TECHNICAL_DESIGN.md  implementation_steps.md  plan.md  plan_mvp.md
miscellaneous/: agent_test_openrouter.py  root_test.py  root_test_openrouter.py  run_analog.py  src_test.py  test_retrieval.py  test_runner.py  test_selector.py
predictions/: final_submission_0.5783_foldedlabels.csv  oof_cheme_ft.csv  oof_cheme_mt.csv  oof_cheme_mt5.csv  oof_ensemble.csv  oof_unimol.csv  oof_unimol_tta.csv  test_cheme_ft.csv  test_cheme_mt.csv  test_cheme_mt5.csv  test_ensemble.csv  test_unimol.csv  test_unimol_tta.csv
reproduce_1/: README.md  approach1_experiment.py  approach2_experiment.py  approach3_zoo.py  build_approach1_data.py  build_approach2_data.py  build_filter_data.py  meta_blend.py
research/: worth_trying_MERGED.md  worth_trying_claude.md  worth_trying_gemini.md  worth_trying_gpt.md
scratchpad/: coldstart_test.py
scripts/: build_proxy_labels.py  calibrate_folds.py  discover_models.py  ensemble_compare.py  finalize.py  finetune_cheme.py  finetune_cheme_mt.py  finetune_cheme_mt5.py  finetune_unimol.py  foldin_set1_experiment.py  ibm_embed.py  judge.py  model_search.py  proxy_specialist_experiment.py  residual_correction_experiment.py  run_auto.py  run_aux.py  run_cheme.py  run_ensemble.py  (+10 more)
(+77 files in other folders)
